tests/good/interpret/010-app-identity.clap
val x = (fun (x) => x) 42

