tests/bad/typing/020-fun-bad-return-type.clap
** char != string
val x : string = (fun (c) : char => 'c') 42
